--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>7.8.0</version>
+        </plugin>
+        
       </plugins>
     </pluginManagement>
   </build>
